
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_4__ {char* name; } ;
struct TYPE_3__ {scalar_t__ t; } ;


 int end_logo () ;
 int printf (char*,...) ;
 TYPE_2__* shellcodes ;
 TYPE_1__* targets ;

void usage(char * s)
{
 printf("\n");
 printf("    Usage: %s -h <host> -p <port>\n", s);
 printf("   -------------------------------------------------------------------\n");
 printf("    Arguments:\n");
 printf("      -h ........ host to attack\n");
 printf("      -p ........ port to use\n");
 printf("\n");
 printf("    Supported mod_jk versions:\n");
 for(int j=0; targets[j].t!=0;j++)
 {
  printf("      %d. %s\n",j+1, targets[j].t);
 }
 printf("\n");
 printf("    Execution: %s\n\n", shellcodes[0].name);
 end_logo();
}
